--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,14 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Firebase config backup (caso você tenha)
+firebase-config-backup.js
 
 npm-debug.log*
 yarn-debug.log*
